{
    "name": "UIInputActions",
    "maps": [
        {
            "name": "FIghtUI",
            "id": "6aaad1e6-f2c3-4a23-af33-44bb9faf1485",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "3423c606-b4e7-4d35-b7b3-e0f5d26aab79",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchLeft",
                    "type": "Button",
                    "id": "c1cd60c0-e43b-4248-97fa-cda5f2290b93",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchRight",
                    "type": "Button",
                    "id": "269b38e6-66cb-4cbb-8b33-255957749a11",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d3904bc2-0ac3-41ad-b083-0dee1373651c",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7558ee23-0f8f-4ba6-b72c-64b37718ef20",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90a1e2b3-9d71-46c0-a345-0fb460651eaf",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}